# 2d_bilinear_polar_hyperbolic

./: 2d_bilinear_polar_hyperbolic.code-workspace  CMakeLists.txt  README.md  Курсач-6-семак.md  Самсонов С. ПМ-01 курсовая.docx
lib/: Constants.h  main.cpp
lib/gaussian_quadrature/: gaussian_quadrature.h
lib/three_steppers/Headers/: SparseMatrix.h
lib/three_steppers/Resourses/: IterSolvers.cpp  SparseMatrix.cpp
tests/test_1/: Constants.h
tests/test_2/: Constants.h
tests/test_4/: Constants.h
tests/test_5/: Constants.h
